--- a/index.html
+++ b/index.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta name="google-site-verification" content="ukmaqZa8g67klNsqsv7d0pBob-jKkPdrMHrQYlvMUWA" />
-<title>Pengcheng Zhang's Webpage</title>
+<title>Chenji Fu's Webpage</title>
 <script src="https://polyfill.io/v3/polyfill.min.js?features=es6"></script>
 <script id="MathJax-script" async
           src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-mml-chtml.js">
@@ -24,18 +23,18 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 <div class="w3-top">
   <div class="w3-bar w3-grey w3-card w3-left-align w3-large">
     <a class="w3-bar-item w3-button w3-hide-medium w3-hide-large w3-right w3-padding-large w3-hover-white w3-large w3-grey" href="javascript:void(0);" onclick="myFunction()" title="Toggle Navigation Menu"><i class="fa fa-bars"></i></a>
-    <a href="https://chbe113.github.io/pengchengzhang" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-white">Home</a>
-    <a href="https://chbe113.github.io/pengchengzhang/research" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Research</a>
-    <a href="https://chbe113.github.io/pengchengzhang/contact" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Contact</a>
+    <a href="https://chenji-fu.github.io" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-white">Home</a>
+    <a href="https://chenji-fu.github.io/research" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Research</a>
+    <a href="https://chenji-fu.github.io/contact" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Contact</a>
     <!-- <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Link 3</a>
     <a href="#" class="w3-bar-item w3-button w3-hide-small w3-padding-large w3-hover-white">Link 4</a> -->
   </div>
 
   <!-- Navbar on small screens -->
   <div id="navDemo" class="w3-bar-block w3-white w3-hide w3-hide-large w3-hide-medium w3-large">
-    <a href="https://chbe113.github.io/pengchengzhang" class="w3-bar-item w3-button w3-padding-large">Home</a>
-    <a href="https://chbe113.github.io/pengchengzhang/research" class="w3-bar-item w3-button w3-padding-large">Research</a>
-    <a href="https://chbe113.github.io/pengchengzhang/contact" class="w3-bar-item w3-button w3-padding-large">Contact</a>
+    <a href="https://chenji-fu.github.io" class="w3-bar-item w3-button w3-padding-large">Home</a>
+    <a href="https://chenji-fu.github.io/research" class="w3-bar-item w3-button w3-padding-large">Research</a>
+    <a href="https://chenji-fu.github.io/contact" class="w3-bar-item w3-button w3-padding-large">Contact</a>
     <!-- <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 3</a>
     <a href="#" class="w3-bar-item w3-button w3-padding-large">Link 4</a> -->
   </div>
@@ -51,11 +50,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 <div class="w3-row-padding w3-padding-64 w3-container">
   <div class="w3-content">
     <div class="w3-twothird">
-      <h5>I am a PhD student at the Max Planck Institute for Mathematics from Jan 2022 and my supervisor is <a href="https://people.mpim-bonn.mpg.de/zagier/">Don Zagier</a>. Before coming to Bonn, I was a MMath student at University of Oxford and my master supervisor was <a href="https://people.maths.ox.ac.uk/lauder/">Alan Lauder</a>. Here is a copy of my <a href="https://chbe113.github.io/pengchengzhang/CV.pdf">CV</a>.</h5>
-      <h5 class="w3-padding-15">I am generally interested in number theory, especially (arithmetic properties of) \(L\)-functions and automorphic forms. My current research projects are related to  </h5>
-              <ul><li> arithmetic properties of Hecke eigenvalues of modular forms (see <a href="https://www.ma.imperial.ac.uk/~buzzard/maths/research/papers/conjs.pdf">the paper by Buzzard</a>);</li></ul>
-              <ul><li> converse theorems for (Hilbert) modular forms (see <a href="https://arxiv.org/abs/math/9502209">the paper by Conrey and Farmer</a>);</li></ul>
-              <ul><li> magnetic modular forms (see <a href="https://arxiv.org/abs/2009.14609">the paper by Paşol and Zudilin</a>).</li></ul>
+     I am a phd student at the University of Bonn under the supervision of Jessica Fintzen and Peter Scholze. I'm interested in  algebraic geometry, number theory and representation theory. More precisely, I'm interested in the Langlands program, representations of finite reductive groups and p-adic groups, and the shtuka spaces.
+
     </div>
   </div>
 </div>
