--- a/index.html
+++ b/index.html
@@ -42,8 +42,8 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
 
 <!-- Header -->
 <header class="w3-container w3-grey w3-center" style="padding:128px 16px">
-  <h2 class="w3-margin w3-jumbo">Pengcheng Zhang</h2>
-  <p class="w3-xlarge">pzhang at mpim-bonn.mpg.de</p>
+  <h2 class="w3-margin w3-jumbo">Chenji Fu</h2>
+  <p class="w3-xlarge">cfu at math.uni-bonn.de</p>
 </header>
 
 <!-- First Grid -->
