--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
     </div>
   </div>
 </div>
-
+<img src="https://raw.githubusercontent.com/username/repository/branch/folder/image.jpg" alt="Description">
 
 <!-- Second Grid -->
 <!--
