--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@ body,h1,h2,h3,h4,h5,h6 {font-family: "Lato", sans-serif}
   </div>
 </div>
           
-<img src="https://raw.githubusercontent.com/Chenji-Fu/Chenji-Fu.github.io/main/Photo_homepage.jpg" alt="Photo_homepage">
+<img src="https://raw.githubusercontent.com/Chenji-Fu/Chenji-Fu.github.io/main/Photo_homepage.jpg" alt="Photo_homepage" width="400" height="800"> 
 
 <!-- Second Grid -->
 <!--
